@@ -23,11 +23,11 @@ import javax.enterprise.event.Observes;
 
 import com.etendoerp.webhookevents.interfaces.DynamicNode;
 import com.etendoerp.webhookevents.webhook_util.Constants;
+import org.apache.commons.lang.BooleanUtils;
 import org.apache.log4j.Logger;
 import org.openbravo.base.exception.OBException;
 import org.openbravo.base.model.Entity;
 import org.openbravo.base.model.ModelProvider;
-import org.openbravo.client.kernel.event.EntityDeleteEvent;
 import org.openbravo.client.kernel.event.EntityNewEvent;
 import org.openbravo.client.kernel.event.EntityPersistenceEventObserver;
 import org.openbravo.client.kernel.event.EntityUpdateEvent;
@@ -43,15 +43,15 @@ public class JsonXmlDataHandler extends EntityPersistenceEventObserver {
   private static Entity[] entities = {
       ModelProvider.getInstance().getEntity(JsonXmlData.ENTITY_NAME) };
   protected Logger logger = Logger.getLogger(this.getClass());
-  final private static String language = OBContext.getOBContext().getLanguage().getLanguage();
-  final private static ConnectionProvider conn = new DalConnectionProvider(false);
+  private static final String LANGUAGE = OBContext.getOBContext().getLanguage().getLanguage();
+  private static final ConnectionProvider conn = new DalConnectionProvider(false);
 
   @Override
   protected Entity[] getObservedEntities() {
     return entities;
   }
 
-  public void onSave(@Observes EntityNewEvent event) throws Exception {
+  public void onSave(@Observes EntityNewEvent event) throws OBException {
     if (!isValidEvent(event)) {
       return;
     }
@@ -59,7 +59,7 @@ public class JsonXmlDataHandler extends EntityPersistenceEventObserver {
     try {
       Entity entity = ModelProvider.getInstance().getEntityByTableName(
           dataParam.getSmfwheWebhook().getSmfwheEvents().getTable().getDBTableName());
-      if (!dataParam.isSummaryLevel()) {
+      if (BooleanUtils.isFalse(dataParam.isSummaryLevel())) {
         valid(entity, dataParam);
       }
     } catch (Exception e) {
@@ -68,7 +68,7 @@ public class JsonXmlDataHandler extends EntityPersistenceEventObserver {
     }
   }
 
-  public void onUpdate(@Observes EntityUpdateEvent event) throws Exception {
+  public void onUpdate(@Observes EntityUpdateEvent event) throws OBException {
     if (!isValidEvent(event)) {
       return;
     }
@@ -76,7 +76,7 @@ public class JsonXmlDataHandler extends EntityPersistenceEventObserver {
     try {
       Entity entity = ModelProvider.getInstance().getEntityByTableName(
           dataParam.getSmfwheWebhook().getSmfwheEvents().getTable().getDBTableName());
-      if (!dataParam.isSummaryLevel()) {
+      if (BooleanUtils.isFalse(dataParam.isSummaryLevel())) {
         valid(entity, dataParam);
       }
     } catch (Exception e) {
@@ -85,54 +85,49 @@ public class JsonXmlDataHandler extends EntityPersistenceEventObserver {
     }
   }
 
-  public void onDelete(@Observes EntityDeleteEvent event) {
-    if (!isValidEvent(event)) {
-      return;
-    }
-  }
-
-  public void valid(Entity entity, JsonXmlData pathParam) throws Exception {
+  public void valid(Entity entity, JsonXmlData pathParam) throws OBException {
     String message = "";
     if (Constants.TYPE_VALUE_STRING.equals(pathParam.getTypeValue())
         && pathParam.getValue() != null) {
-      for (String s : pathParam.getValue().split(" ")) {
-        if (s.contains(Constants.AT)) {
-          if (DalUtil.getPropertyFromPath(entity, s.split(Constants.AT)[1]) == null) {
-            message = String.format(Utility.messageBD(conn, "smfwhe_ErrorProperty", language),
-                s.split(Constants.AT)[1].toString());
-            // throw new Exception(s.split(Constants.AT)[1].toString());
-            throw new Exception(message);
-          }
-        }
-      }
+      getMessage(entity, pathParam);
     } else if (Constants.TYPE_VALUE_DYNAMIC_NODE.equals(pathParam.getTypeValue())) {
       String className = pathParam.getJavaClassName();
       Class<?> clazz; // convert string classname to class
       try {
         clazz = Class.forName(className);
-        Object dog = clazz.newInstance(); // invoke empty constructor
+        Object dog =  clazz.getDeclaredConstructor().newInstance();
         if (dog.getClass().getInterfaces()[0]
             .equals(DynamicNode.class)) {
           String methodName = "";
           if (Constants.TYPE_VALUE_COMPUTED
-              .equals(pathParam == null ? pathParam.getTypeValue() : pathParam.getTypeValue())) {
+              .equals(pathParam.getTypeValue())) {
             methodName = Constants.METHOD_NAME;
           } else if (Constants.TYPE_VALUE_DYNAMIC_NODE
-              .equals(pathParam == null ? pathParam.getTypeValue() : pathParam.getTypeValue())) {
+              .equals(pathParam.getTypeValue())) {
             methodName = Constants.METHOD_NAME_DYNAMIC_NODE;
           }
           dog.getClass().getMethod(methodName, HashMap.class);
         }
       } catch (Exception e1) {
-        throw e1;
+        throw new OBException(e1);
       }
-    } else if (Constants.TYPE_VALUE_PROPERTY.equals(pathParam.getTypeValue())) {
-      if (DalUtil.getPropertyFromPath(entity, pathParam.getProperty()) == null) {
-        message = String.format(Utility.messageBD(conn, "smfwhe_ErrorProperty", language),
+    } else if (Constants.TYPE_VALUE_PROPERTY.equals(pathParam.getTypeValue()) && DalUtil.getPropertyFromPath(entity, pathParam.getProperty()) == null) {
+        message = String.format(Utility.messageBD(conn, "smfwhe_ErrorProperty", LANGUAGE),
             pathParam.getProperty());
-        // throw new Exception(pathParam.getProperty());
-        throw new Exception(message);
+        throw new OBException(message);
+      }
+  }
+
+  private static String getMessage(Entity entity, JsonXmlData pathParam) {
+    String message = null;
+    for (String s : pathParam.getValue().split(" ")) {
+      if (s.contains(Constants.AT) && DalUtil.getPropertyFromPath(entity,
+          s.split(Constants.AT)[1]) == null) {
+        message = String.format(Utility.messageBD(conn, "smfwhe_ErrorProperty", LANGUAGE),
+            s.split(Constants.AT)[1]);
+        throw new OBException(message);
       }
     }
+    return message;
   }
 }
